js/src/tests/test262/language/import/import-defer/errors/module-throws/throws_FIXTURE.js
throw
{
someError
:
"
the
error
from
throws_FIXTURE
"
}
